[package]
name = "rgg"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-channel = "2.3.1"
rand = "0.8.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_derive = "1.0.204"
serde_json = "1.0.120"
tokio = { version = "1.38.1", features = ["full", "io-std"] }

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
